--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -58,9 +58,23 @@
 
 
             <!-- Gráficos -->
-            {% block charts %}
-            <!-- Aquí se insertarán los gráficos en los templates específicos -->
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                {% block charts %}
+                <!-- Aquí se insertarán los gráficos en los templates específicos -->
+                {% endblock %}
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+            {% block tabla %}
+
             {% endblock %}
+            </div>
+        </div>
+
+            {% block table %}
             <div class="table-container">
                 <h5 class="text-center bg-dark text-white p-3">{{ title_table }}</h5>
                 <div class="table-responsive">
@@ -78,6 +92,7 @@
                     </table>
                 </div>
             </div>
+            {% endblock %}
             {% block pagination %}
             <!-- Paginación -->
             <div class="d-flex justify-content-center mt-4">
