--- a/Autenticacion/Modulos/Coordinador/List_Reportes/templates/reporte_incidente.html
+++ b/Autenticacion/Modulos/Coordinador/List_Reportes/templates/reporte_incidente.html
@@ -115,7 +115,7 @@
                 </td>
                 <td class="evidencia">
                     {% if detalle.evidencia %}
-                    <img src="{{ detalle.evidencia }}" alt="Evidencia" width="200">
+                    <center> <img src="{{ detalle.evidencia }}" alt="Evidencia" width="2150px"> </center>
                     {% else %}
                     Sin evidencia
                     {% endif %}
@@ -136,7 +136,7 @@
                 </td>
                 <td class="evidencia">
                     {% if detalle.evidencia %}
-                    <img src="{{ detalle.evidencia }}" alt="Evidencia" width="200">
+                    <center><img src="{{ detalle.evidencia }}" alt="Evidencia" width="150px"></center>
                     {% else %}
                     Sin evidencia
                     {% endif %}
@@ -157,7 +157,7 @@
                 </td>
                 <td class="evidencia">
                     {% if detalle.evidencia %}
-                    <img src="{{ detalle.evidencia }}" alt="Evidencia" width="200">
+                    <center><img src="{{ detalle.evidencia }}" alt="Evidencia" width="150px"></center>
                     {% else %}
                     Sin evidencia
                     {% endif %}
