--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -4,28 +4,179 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a href="/" class="navbar-brand">
-            <img src="{% static 'img/inci_manager.png' %}"  class="mx-4" width="50px">
+            <img src="{% static 'img/inci_manager.png' %}" class="mx-4" width="50px">
         </a>
 
         <!-- Botón para colapsar el menú en pantallas móviles -->
-        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
-                aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+
         <!-- Contenido del navbar -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+            <div class="movil-view">
+                <div class="accordion" id="accordionExample">
+                    <li class="nav-item">
+                        <div class="accordion-item bg-dark border-0">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button bg-dark text-white border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseAdmin" aria-expanded="false"
+                                    aria-controls="collapseAdmin">
+                                    <i class="fa-sharp fa-solid fa-users me-2"></i>
+                                    <span class="nav-text">Administración del personal</span>
+                                </button>
+                            </h2>
+                            <div id="collapseAdmin" class="accordion-collapse collapse" data-bs-parent="#asideAccordion">
+                                <ul class="list-unstyled accordion-body p-2">
+                                    <li class="mb-2">
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'login:listar_rol' %}">
+                                            <i class="fa-sharp fa-solid fa-address-book me-2"></i>
+                                            <span class="nav-text">Rol</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'login:personal' %}">
+                                            <i class="fa-solid fa-users me-2"></i>
+                                            <span class="nav-text">Registro de personal</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="accordion-item bg-dark border-0">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button bg-dark text-white border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapsePlanning" aria-expanded="false"
+                                    aria-controls="collapsePlanning">
+                                    <i class="fa-sharp fa-solid fa-calendar-alt me-2"> </i>
+                                    <span class="nav-text">Planificación</span>
+        
+                                </button>
+                            </h2>
+                            <div id="collapsePlanning" class="accordion-collapse collapse" data-bs-parent="#asideAccordion">
+                                <ul class="list-unstyled accordion-body p-2">
+                                    <li class="mb-2">
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'turno:listar_turno' %}">
+                                            <i class="fa-sharp fa-solid fa-code-compare me-2"></i>
+                                            <span class="nav-text">Turno</span>
+                                        </a>
+                                    </li>
+                                    <li class="mb-2">
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'calendario:listado_calendario' %}">
+                                            <i class="fa-sharp fa-solid fa-calendar-days me-2"></i>
+                                            <span class="nav-text">Periodo</span>
+                                        </a>
+                                    </li>
+                                    <li class="mb-2">
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'ubicacion:inicio' %}">
+                                            <i class="fa-solid fa-map-location-dot me-2"></i>
+                                            <span class="nav-text">Lugares de Guardia</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link text-white  d-flex align-items-center"
+                                            href="{% url 'calendario:listar_planificacion' %}">
+                                            <i class="fa-solid fa-calendar me-2"></i>
+                                            <span class="nav-text">Planificación</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="accordion-item bg-dark border-0">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button bg-dark text-white border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseNews" aria-expanded="false"
+                                    aria-controls="collapseNews">
+                                    <i class="fa-solid fa-list me-2"></i>
+                                    <span class="nav-text">Novedades</span>
+                                </button>
+                            </h2>
+                            <div id="collapseNews" class="accordion-collapse collapse" data-bs-parent="#asideAccordion">
+                                <ul class="list-unstyled accordion-body p-2">
+                                    <li class="mb-2">
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'novedad:inicio_tipoNov' %}">
+                                            <i class="fa-solid fa-list-ul me-2"></i>
+                                            <span class="nav-text">Tipo de Novedades</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'novedad:inicio' %}">
+                                            <i class="fa-solid fa-list-check me-2"></i>
+                                            <span class="nav-text">Novedades</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="accordion-item bg-dark border-0">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button bg-dark text-white border-0 collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseReportes" aria-expanded="false"
+                                    aria-controls="collapseReportes">
+                                    <i class="fa-sharp fa-solid fa-folder-open me-2"></i> 
+                                    <span class="nav-text" >Gestión de Reportes</span>
+                                </button>
+                            </h2>
+                            <div id="collapseReportes" class="accordion-collapse collapse" data-bs-parent="#asideAccordion">
+                                <ul class="list-unstyled accordion-body p-2">
+                                    <li class="mb-2">
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'reportesCoord:listado_reportes_agente' %}">
+                                            <i class="fa-solid fa-box-tissue me-2"></i>
+                                            <span class="nav-text"> Reportes del Personal </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'reportesCoord:resumen_datos' %}">
+                                            <i class="fa-solid fa-chart-pie me-2"></i>
+                                            <span class="nav-text"> Dashboard </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="nav-link text-white d-flex align-items-center"
+                                            href="{% url 'auditoria:listar_auditoria' %}">
+                                            <i class="fa-sharp fa-solid fa-folder me-2"></i>
+                                            <span class="nav-text"> Auditoría </span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                </div>
+            </div>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <!-- Dropdown para el usuario -->
                 <li class="nav-item dropdown mx-3 my-auto">
-                    <a class="nav-link dropdown-toggle text-white d-flex align-items-center" href="#" role="button" 
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-white d-flex align-items-center" href="#" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="me-2"><b>{{ nombre }} {{ apellido }}</b></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark w-105">
                         <li><a class="dropdown-item" href="/">Inicio</a></li>
                         <li><a class="dropdown-item" href="{% url 'login:cambiar_clave' %}">Cambiar contraseña</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="{% url 'login:logout' %}">Cerrar sesión</a></li>
                     </ul>
                 </li>
