--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -24,16 +24,14 @@
 
 
         <div class="container">
-
-
-            <div class="row justify-content-between align-items-center mb-3">
+            <div class="botones mb-3">
                 <!-- Search bar -->
-                <div class="col-lg-8 search-btn">
+                <div>
                     {% block search %}
                     {% endblock %}
                 </div>
                 <!-- Button -->
-                <div class="col-lg-4 text-end">
+                <div>
                     {% block btnTitle %}
                     {% endblock %}
                 </div>
