Acomodado los botones

--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -9,7 +9,7 @@ Modulo Novedad
 {% block search %}
 <form action="{{ dir_search }}" method="GET">
     <div class="input-group">
-        <input type="text" name="query" value="{{ query }}"
+        <input type="text" class="form-control" name="query" value="{{ query }}"
         placeholder = "Filtra por Tipos de Novedades o Novedades" aria-describedby="basic-addon2" />
         <button type="submit" class="btn btn-primary mr-1" id="idSearchSp">Buscar</button>
     </div>
