--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -22,7 +22,7 @@
 .container .botones{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .side-bar {
