--- a/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
@@ -8,7 +8,7 @@ Módulo Personal
 {% block search %}
 <form action="{{ dir_search }}" method="GET">
     <div class="input-group">
-        <input type="text" name="query" value="{{ query }}"
+        <input type="text" class="form-control" name="query" value="{{ query }}"
         placeholder = "Filtrar por Nombre y/o Apellido" aria-describedby="basic-addon2" />
         <button type="submit" class="btn btn-primary mr-1" id="idSearchSp">Buscar</button>
     </div>
