--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -156,7 +156,6 @@
                                     <span class="nav-text"> Auditoría </span>
                                 </a>
                             </li>
-                            
                         </ul>
                     </div>
                 </div>
@@ -167,7 +166,7 @@
                 <a class="nav-link text-white d-flex align-items-center"
                     href="{% url 'reportes:listar_reportes' %}">
                     <i class="fa-sharp fa-solid fa-rectangle-list me-2"></i>
-                    <span>Reportes de Incidentes</span>
+                    <span class="nav-text">Reportes de Incidentes</span>
                 </a>
             </li>
             {% endif %}
